<resources>
    <string name="app_name">NutriTracker</string>
    <string name="welcome">Welcome to NutriTrack!</string>
    <string name="addGoal">To continue add a Calorie-Goal:</string>
    <string name="goal">Enter goal</string>
    <string name="save">Save goal and continue</string>
    <string name="goalTextViewValue" />
    <string name="alreadyConsumedViewValue">0</string>
    <string name="addConsumedCaloriesHintValue">Enter your Calories you have consumed so far.</string>
    <string name="addCaloriesFieldHint">Add calories</string>
    <string name="saveCalories">Add Calories</string>
    <string name="generateRecipes">Get Recipes</string>
    <string name="restOrChangeGoalHintValue">You want to reset your consumed calories or change your goal?</string>
    <string name="resetRecipesButtonText">Reset calories</string>
    <string name="orValue">Or</string>
    <string name="editCalorieGoalHint">Change goal</string>
    <string name="changeGoalButtonLabel">Change goal</string>
    <string name="recipeTitleValue">Your recipes proposals</string>
    <string name="no_recipe_found">No recipe found</string>
    <string name="no_recipe_message">There was no Recipe found for your calorie difference.</string>
    <string name="no_recipe_found2">No recipe found.</string>
    <string name="goBack">Back to Tracking</string>
    <string name="goalTextViewLabel">Goal:</string>
    <string name="allReadyConsumedLabel">Consumed:</string>
</resources>