<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/goalTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/goalTextViewValue"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alreadyConsumedTextView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/alreadyConsumedViewValue"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addConsumedCaloriesHint"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/addConsumedCaloriesHintValue"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/addCaloriesField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:autofillHints="2000"
                android:hint="@string/addCaloriesFieldHint"
                android:inputType="phone"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/addCaloriesButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/saveCalories" />
        </LinearLayout>

        <Button
            android:id="@+id/generateRecipesButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/generateRecipes" />

        <TextView
            android:id="@+id/resetCaloriesHint"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/restOrChangeGoalHintValue"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/resetRecipesButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/resetRecipesButtonText" />

        <TextView
            android:id="@+id/or"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/orValue"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/editCalorieGoalField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:autofillHints="2000"
                android:hint="@string/editCalorieGoalHint"
                android:inputType="phone"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/changeGoalButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/changeGoalButtonLabel" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>